# gnl

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  gnl.pro  gnl_binpacking.h  gnl_expression.h  gnl_filesystem.h  gnl_json.h  main.cpp
.travis/: build.sh  install.sh
cmake/: warnings.cmake
examples/: CMakeLists.txt  animate.cpp  domain_stream_socket.cpp  json.cpp  main.cpp  main2.cpp  message_bus.cpp  multiclient_tcp_server.cpp  path.cpp  periodic.cpp  rk4.cpp  signals.cpp  socket.cpp  socket_server.cpp  socket_shell.cpp  tcp_client.cpp  tcp_server.cpp  tcp_server_2.cpp  thread_pool.cpp  udp_client.cpp  udp_server.cpp  unix_socket.cpp
examples/rk4/: rk4.cpp
gnl/: dir_list.h  gnl_animate.h  gnl_arrayview.h  gnl_base64.h  gnl_binpacking.h  gnl_console.h  gnl_expression.h  gnl_interp.h  gnl_json.h  gnl_json2.h  gnl_message_bus.h  gnl_meta.h  gnl_path.h  gnl_periodic.h  gnl_rk4.h  gnl_signals.h  gnl_socket.h  gnl_threadpool.h  gnl_unicode.h  gnl_unixsocket.h  gnl_variant.h
include/gnl/: array_alias.h  arrayview.h  data_store.h  entity_component_system.h  gnl_animate.h  gnl_interp.h  gnl_json.h  gnl_json2.h  gnl_path.h  gnl_periodic.h  gnl_resource_path.h  gnl_rk4.h  gnl_socket.h  gnl_unicode.h  interp.h  json.h  message_bus2.h  meta.h  path.h  resource_path.h  signals.h  singleton.h  socket.h  socket_old.h  socket_server.h  socket_shell.h  threadpool.h  variant.h  vp_variant.h
src/: CMakeLists.txt
test/: CMakeLists.txt  cxx17_check.cpp  unit-array_view.cpp  unit-binpacking_test.cpp  unit-interp_test.cpp  unit-message_bus2.cpp  unit-meta_test.cpp  unit-path_test.cpp  unit-resource_path_test.cpp  unit-variant_test.cpp  unit-vp_variant.cpp
test/cxx_11/: uint-aspan.cpp  unit-array_alias.cpp  unit-array_view.cpp  unit-periodic_test.cpp  unit-resource_path_test.cpp  unit-socket_shell.cpp  unit-threadpool_test.cpp  unit-variant_test.cpp
test/cxx_17/: unit-data_store.cpp  unit-entity_component_system.cpp  unit-message_bus2.cpp  unit-vp_variant.cpp
test/deprecated/: unit-entity_component_system.cpp  unit-json2_test.cpp  unit-message_bus2.cpp
test/src/: unit-array_view.cpp  unit-binpacking_test.cpp  unit-interp_test.cpp  unit-json2_test.cpp  unit-json_test.cpp  unit-meta_test.cpp  unit-path_test.cpp  unit-periodic_test.cpp  unit-resource_path_test.cpp  unit-threadpool_test.cpp  unit-variant_test.cpp
tests/: array_view.cpp  binpacking_test.cpp  interp_test.cpp  json2_test.cpp  json_test.cpp  meta_test.cpp  path_test.cpp  periodic_test.cpp
